<resources>
    <string name="app_name">Tyro Student</string>
    <string name="default_notification_channel_id">Tyro Student</string>
    <string name="welcome">Welcome</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="dummy_text_large"> Lorem Ipsum has been the industry Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="Email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email</string>
    <string name="i_agree_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="next">Next</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="upload_license">Upload License</string>
    <string name="upload_insurance">Upload Insurance</string>
    <string name="upload_void_cheque">Upload Void Cheque</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload">Upload</string>
    <string name="calender">Calender</string>
    <string name="home">Home</string>
    <string name="my_classes">My Classes</string>
    <string name="chat">Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="cards">Cards</string>
    <string name="notifications">Notifications</string>
    <string name="faq_s">FAQ</string>
    <string name="logout">Logout</string>
    <string name="remaining_payouts">Remaining Payouts</string>
    <string name="write_message">Write Message</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="performance">Performance</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="manoeuvres">Manoeuvres</string>
    <string name="time_date"><![CDATA[Time & Date]]></string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="available">Available</string>
    <string name="bsy">Busy</string>

    <!--  development-->
    <string name="enter_name">Please enter name</string>
    <string name="Enter_email">Please enter email</string>
    <string name="please_enter_your_valid_email">please enter valid email</string>
    <string name="enter_number">Please enter your mobile number</string>
    <string name="enter_number_length">Mobile number should be 10 digits</string>
    <string name="enter_password">Please enter password</string>
    <string name="please_check_your_network_connection">please check your internet connections</string>
    <string name="agree_terms_cond">please agree to the terms and conditions</string>
    <string name="pleaseenterallfields">please enter all fields</string>
    <string name="connecttointernet">connect to internet</string>
    <string name="emailaddress">Enter Email Address</string>
    <string name="forgot">Forgot password?</string>
    <string name="google_maps_api">AIzaSyCziqe1Q-d4HMC3D9ZyYDFkBtx8ZHrzGzM</string>
    <string name="gps_tracck_msg">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings">GPS is settings</string>
    <string name="settings">Settings</string>
    <string name="set_your_service_location">set your location</string>
    <string name="confirm_location">confirm location</string>
    <string name="takeaphoto">Take a Photo</string>
    <string name="photos">Photos</string>
    <string name="choosefrmgallery">Choose From Gallery</string>
    <string name="Image_added">Document Added</string>
    <string name="pwd_not_matching">confirm password not matching with password</string>
    <string name="confirm_password">Please enter confirm Password</string>
    <string name="entercty">Please enter City</string>
    <string name="abt">Please write about You</string>
    <string name="pleaseenteryourotp">please enter your otp number</string>
    <string name="deletecard">Do you want to delete this card?</string>
    <string name="conform_location">confirm location</string>
    <string name="search_address_here">Search your address here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_by_credit">Take by Credit</string>
</resources>