<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_black"
    tools:context="com.student.tyro.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_signin_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/worksans_light"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_useremail"
            style="@style/StyleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/worksans_light"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_pswd"
                style="@style/StyleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/worksans_light"
                android:hint="Password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/showpassword"
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/eyeactive" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgotpswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/worksans_light"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/StyleButtonYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_light"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/worksans_light"
            android:text="Sign Up"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</RelativeLayout>
