<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_black"
    android:paddingBottom="@dimen/_80sdp"
    tools:context="com.student.tyro.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/icn_arrow_left_white" />/

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/upload_license"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/worksans_medium"
            android:text="@string/dummy_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/upload_img"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/img_path"
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:fontFamily="@font/worksans_medium"
                    android:gravity="center|left"
                    android:text="@string/upload"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/choose_doc"
                style="@style/StyleChooseButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/choose_photo"
                android:textAllCaps="false" />

        </RelativeLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/StyleButtonYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_margin="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="Submit"
        android:textSize="@dimen/_16ssp" />
</RelativeLayout>