<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_black"
    tools:context="com.student.tyro.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_25sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/icn_arrow_left_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/worksans_medium"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/worksans_medium"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_fname"
                style="@style/StyleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/worksans_light"
                android:hint="@string/fname"
                android:inputType="textCapWords"
                tools:text="" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_lname"
                style="@style/StyleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/worksans_light"
                android:hint="@string/lname"
                android:inputType="textCapWords"
                tools:text="" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_phno"
                style="@style/StyleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/worksans_light"
                android:hint="Ex: 185003XXXXX"
                android:inputType="phone"
                android:maxLength="12"
                tools:text="" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                style="@style/StyleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/worksans_light"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                tools:text="" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_pswd"
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:fontFamily="@font/worksans_light"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_horizontal"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/worksans_light"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/i_agree_the_terms_and_conditions"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/StyleButtonYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_16ssp" />


            <LinearLayout
                android:id="@+id/llSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/worksans_light"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorYellow"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
