<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/colorWhite"    android:orientation="vertical"    android:id="@+id/rel_main">    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent" />    <androidx.cardview.widget.CardView        android:id="@+id/track_two_layout"        android:layout_width="match_parent"        android:layout_height="match_parent">        <RelativeLayout            android:id="@+id/map_layout_loc"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <fragment                android:id="@+id/map"                android:name="com.google.android.gms.maps.SupportMapFragment"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_gravity="center" />            <ImageView                android:id="@+id/map_image"                android:layout_width="match_parent"                android:layout_height="match_parent" />            <androidx.cardview.widget.CardView                app:cardCornerRadius="10dp"                android:layout_marginTop="80dp"                android:layout_marginStart="20dp"                android:layout_marginEnd="20dp"                android:layout_width="match_parent"                android:layout_height="50dp">                <LinearLayout                    android:orientation="horizontal"                    android:layout_width="match_parent"                    android:layout_height="match_parent">                    <ImageView                        android:layout_marginStart="20dp"                        android:src="@drawable/icn_location"                        android:layout_width="wrap_content"                        android:layout_height="match_parent">                    </ImageView>                    <TextView                        android:id="@+id/search_location"                        android:gravity="center|start"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:layout_marginLeft="15dp"                        android:layout_marginTop="5dp"                        android:layout_marginRight="15dp"                        android:layout_marginBottom="5dp"                        android:singleLine="true"                        android:hint="Search Your Location"                        android:inputType="textMultiLine"                        android:maxLines="1"                        android:textColor="@color/colorBlack"                        android:textColorHint="@color/colorBlack"                        android:textSize="14sp"                        tools:ignore="TextViewEdits"                        android:fontFamily="@font/worksans_medium"/>                </LinearLayout>            </androidx.cardview.widget.CardView>            <ImageView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerInParent="true"                android:src="@drawable/icn_current_location" />            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_alignParentBottom="true"                android:orientation="vertical">                <androidx.appcompat.widget.AppCompatImageView                    android:id="@+id/pin_current_location"                    android:layout_width="@dimen/_40sdp"                    android:layout_height="@dimen/_40sdp"                    android:layout_above="@+id/bt_confirm_loc"                   android:layout_gravity="right"                    android:layout_marginRight="30dp"                    android:src="@drawable/icn_location_rounded" />                <androidx.appcompat.widget.AppCompatButton                    android:id="@+id/bt_confirm_loc"                    style="@style/StyleButtonYellow"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_alignParentBottom="true"                    android:layout_marginStart="@dimen/_20sdp"                    android:layout_marginEnd="@dimen/_20sdp"                    android:layout_margin="@dimen/_20sdp"                    android:textSize="@dimen/_16ssp"                    android:text="@string/next"                    tools:ignore="DuplicateIds" />            </LinearLayout>        </RelativeLayout>    </androidx.cardview.widget.CardView>    <LinearLayout        android:id="@+id/loc_layout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_marginStart="15dp"        android:layout_marginEnd="15dp"        android:layout_marginBottom="15dp"        android:background="@drawable/white_background"        android:orientation="vertical"        android:visibility="gone">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:visibility="gone">            <TextView                android:id="@+id/text_location"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_marginLeft="15dp"                android:layout_marginTop="20dp"                android:layout_marginRight="15dp"                android:layout_marginBottom="20dp"                android:hint="@string/set_your_service_location"                android:inputType="textMultiLine"                android:maxLines="3"                android:textColor="@color/colorBlack"                android:textColorHint="@color/colorBlack"                android:textSize="14sp"                tools:ignore="TextViewEdits" />        </LinearLayout>        <Button            android:id="@+id/bt_confirm_loc"            android:layout_width="300dp"            android:layout_height="wrap_content"            android:layout_gravity="center_horizontal"            android:layout_marginTop="20dp"            android:layout_marginBottom="20dp"            android:foreground="?android:attr/selectableItemBackground"            android:text="@string/confirm_location"            android:textAllCaps="true"            android:textColor="@color/colorBlack"            android:textSize="18sp"            tools:ignore="RtlSymmetry" />    </LinearLayout></RelativeLayout>    <!--    <?xml version="1.0" encoding="utf-8"?>    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"        xmlns:tools="http://schemas.android.com/tools"        android:layout_width="match_parent"        android:layout_height="match_parent"        xmlns:app="http://schemas.android.com/apk/res-auto">        <fragment            android:id="@+id/map"            android:name="com.google.android.gms.maps.SupportMapFragment"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_gravity="center" />        <androidx.cardview.widget.CardView            style="@style/StyleEditTextWhite"            app:cardCornerRadius="10dp"            android:layout_marginTop="80dp"            android:layout_marginStart="20dp"            android:layout_marginEnd="20dp"            android:layout_width="match_parent"            android:layout_height="50dp">            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_height="match_parent">                <ImageView                    android:layout_marginStart="20dp"                    android:src="@drawable/icn_location"                    android:layout_width="wrap_content"                    android:layout_height="match_parent">                </ImageView>                <TextView                    android:id="@+id/search_location"                    android:gravity="center|start"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:layout_marginLeft="15dp"                    android:layout_marginTop="5dp"                    android:layout_marginRight="15dp"                    android:layout_marginBottom="5dp"                    android:hint="Search Your Location"                    android:inputType="textMultiLine"                    android:maxLines="3"                    android:textSize="14sp"                    tools:ignore="TextViewEdits" />            </LinearLayout>        </androidx.cardview.widget.CardView>            <androidx.appcompat.widget.AppCompatButton                android:id="@+id/bt_confirm_loc"                style="@style/StyleButtonYellow"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_alignParentBottom="true"                android:layout_marginStart="@dimen/_20sdp"                android:layout_marginLeft="@dimen/_20sdp"                android:layout_marginTop="@dimen/_25sdp"                android:layout_marginEnd="@dimen/_20sdp"                android:layout_marginRight="@dimen/_20sdp"                android:layout_marginBottom="@dimen/_20sdp"                android:text="@string/next" />        <androidx.appcompat.widget.AppCompatImageView            android:id="@+id/pin_current_location"            android:layout_width="@dimen/_40sdp"            android:layout_height="@dimen/_40sdp"            android:layout_above="@+id/btnNext"            android:layout_alignParentEnd="true"            android:layout_alignParentRight="true"            android:layout_alignParentBottom="true"            android:layout_marginEnd="44dp"            android:layout_marginRight="30dp"            android:layout_marginBottom="94dp"            android:src="@drawable/icn_location_rounded" />        <androidx.appcompat.widget.AppCompatEditText                style="@style/StyleEditTextWhite"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/_20sdp"                android:textSize="@dimen/_12ssp"                android:maxLines="1"                android:drawableLeft="@drawable/icn_location"                android:drawablePadding="@dimen/_15sdp"                android:text="33, Royden pl#Nepean, ON K2E "                android:visibility="gone"/>            <androidx.appcompat.widget.AppCompatImageView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerInParent="true"                android:src="@drawable/icn_current_location" />        <TextView            android:id="@+id/text_location"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_marginLeft="15dp"            android:layout_marginTop="20dp"            android:layout_marginRight="15dp"            android:layout_marginBottom="20dp"            android:hint="@string/set_your_service_location"            android:inputType="textMultiLine"            android:maxLines="3"            android:textColor="@color/colorBlack"            android:textColorHint="@color/colorBlack"            android:textSize="14sp"            tools:ignore="TextViewEdits" />        </RelativeLayout>    -->